Initialize ESP32-C3 Embassy project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,40 @@
 [package]
+edition      = "2024"
+name         = "gummy-quacker"
+rust-version = "1.88"
+version      = "0.1.0"
+
+[[bin]]
 name = "gummy-quacker"
-version = "0.1.0"
-edition = "2024"
+path = "./src/bin/main.rs"
 
 [dependencies]
+esp-hal = { version = "~1.0", features = ["defmt", "esp32c3", "unstable"] }
+
+esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32c3"] }
+
+defmt                  = "1.0.1"
+esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }
+
+embassy-executor = { version = "0.9.1", features = ["defmt"] }
+embassy-time     = { version = "0.5.0", features = ["defmt"] }
+panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
+rtt-target       = { version = "0.6.2", features = ["defmt"] }
+
+critical-section = "1.2.0"
+static_cell      = "2.1.1"
+
+
+[profile.dev]
+# Rust debug is too slow.
+# For debug builds always builds with some optimization
+opt-level = "s"
+
+[profile.release]
+codegen-units    = 1     # LLVM can perform better optimizations using a single thread
+debug            = 2
+debug-assertions = false
+incremental      = false
+lto              = 'fat'
+opt-level        = 's'
+overflow-checks  = false
